--- a/package.json
+++ b/package.json
@@ -9,15 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/next-js": "^2.1.5",
+    "@chakra-ui/react": "^2.8.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@nextui-org/react": "^1.0.0-beta.13",
-    "bootstrap": "^5.3.0",
+    "bootstrap": "^5.3.1",
     "boxicons": "^2.1.4",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
-    "next": "13.4.12",
+    "framer-motion": "^10.16.4",
+    "next": "^13.4.18",
     "react": "18.2.0",
+    "react-awesome-slider": "^4.1.0",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.14.2",
-    "react-router-hash-link": "^2.4.3"
+    "react-router-hash-link": "^2.4.3",
+    "react-scripts": "^5.0.1",
+    "react-scroll": "^1.8.9",
+    "react-slick": "^0.29.0",
+    "sass": "^1.65.1",
+    "slick-carousel": "^1.8.1"
   }
 }
