--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "react-slick": "^0.29.0",
     "sass": "^1.65.1",
     "slick-carousel": "^1.8.1"
+  },
+  "devDependencies": {
+    "@types/react": "18.2.38"
   }
 }
